--- a/scripts/text_to_video/simple_infer_s448-v.ipynb
+++ b/scripts/text_to_video/simple_infer_s448-v.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/src')\n",
+    "sys.path.append('/workspace/wxd/SVD')\n",
     "\n",
     "import os\n",
     "import torch\n",
@@ -40,15 +40,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_models(pretrained_model_name_or_path = '/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels-vis/ti2v_s448_imclip/checkpoint-16000', device='cuda:0'):\n",
+    "def load_models(pretrained_model_name_or_path = '/volsparse1/wxd/smodels-vis/ti2v_s448_imclip/checkpoint-6000', device='cuda:0'):\n",
     "    text_encoder = CLIPTextModel.from_pretrained(\n",
-    "                '/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels/image-allframes-ep100-checkpoint-30000', subfolder=\"text_encoder\",\n",
+    "                '/volsparse1/wxd/smodels/stable-diffusion-v1-4', subfolder=\"text_encoder\",\n",
     "    )\n",
     "    vae = AutoencoderKL.from_pretrained(\n",
-    "                '/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels/image-allframes-ep100-checkpoint-30000', subfolder=\"vae\",\n",
+    "                '/volsparse1/wxd/smodels/stable-diffusion-v1-4', subfolder=\"vae\",\n",
     "    )\n",
     "    clip_model = CLIPModel.from_pretrained(\n",
-    "        \"/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels/clip-vit-large-patch14\", torch_dtype=torch.float16)\n",
+    "        \"/volsparse1/wxd/smodels/clip-vit-large-patch14\", torch_dtype=torch.float16)\n",
     "\n",
     "    text_encoder.eval()\n",
     "    vae.eval()\n",
@@ -57,9 +57,9 @@
     "    vae.to(device)\n",
     "    clip_model.to(device)\n",
     "\n",
-    "    tokenizer = CLIPTokenizer.from_pretrained('/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels/image-allframes-ep100-checkpoint-30000', subfolder=\"tokenizer\")\n",
-    "    scheduler = DDPMScheduler.from_pretrained('/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels/image-allframes-ep100-checkpoint-30000', subfolder=\"scheduler\")\n",
-    "    feature_extractor = CLIPImageProcessor.from_pretrained('/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels/image-allframes-ep100-checkpoint-30000', subfolder=\"feature_extractor\")\n",
+    "    tokenizer = CLIPTokenizer.from_pretrained('/volsparse1/wxd/smodels/stable-diffusion-v1-4', subfolder=\"tokenizer\")\n",
+    "    scheduler = DDPMScheduler.from_pretrained('/volsparse1/wxd/smodels/stable-diffusion-v1-4', subfolder=\"scheduler\")\n",
+    "    feature_extractor = CLIPImageProcessor.from_pretrained('/volsparse1/wxd/smodels/stable-diffusion-v1-4', subfolder=\"feature_extractor\")\n",
     "\n",
     "    # unet = UNetSpatioTemporalConditionModel_Action.from_pretrained(pretrained_model_name_or_path, subfolder=\"unet\")\n",
     "    # unet.temp_style = \"image\" # use image clip embedding\n",
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pretrained_model_name_or_path = '/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels-vis/ti2v_s448_imclip/checkpoint-16000'\n",
+    "pretrained_model_name_or_path = '/volsparse1/wxd/smodels-vis/ti2v_s448_imclip/checkpoint-6000'\n",
     "pipeline = load_models(pretrained_model_name_or_path, \"cuda:0\")\n"
    ]
   },
@@ -121,8 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "git_processor_large = AutoProcessor.from_pretrained(\"/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels/git-large-coco\")\n",
-    "git_model_large = AutoModelForCausalLM.from_pretrained(\"/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/smodels/git-large-coco\")\n",
+    "git_processor_large = AutoProcessor.from_pretrained(\"/volsparse1/wxd/smodels/git-large-coco\")\n",
+    "git_model_large = AutoModelForCausalLM.from_pretrained(\"/volsparse1/wxd/smodels/git-large-coco\")\n",
     "print('loaded caption model!')\n"
    ]
   },
@@ -146,10 +146,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1, 12):\n",
-    "    image_path = f\"/mnt/storage/user/wangxiaodong/framework/DWM/waymo_{i}.jpg\"\n",
+    "for i in range(1):\n",
+    "    image_path = f\"nusc_test.jpg\"\n",
     "\n",
-    "    root_dir = \"waymo_case\"\n",
+    "    root_dir = \"nusc_test\"\n",
     "    image = Image.open(image_path)\n",
     "    prompt = generate_caption(image, git_processor_large, git_model_large)\n",
     "\n",
