fix import path

--- a/scripts/text_to_image/infer_models_allframes_8_4.ipynb
+++ b/scripts/text_to_image/infer_models_allframes_8_4.ipynb
@@ -11,7 +11,7 @@
     "import torch.nn as nn\n",
     "import os\n",
     "import sys\n",
-    "sys.path.append('/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/src')\n",
+    "sys.path.append('/workspace/wxd/SVD/src')\n",
     "from transformers import CLIPTextModel, CLIPTokenizer, CLIPModel, CLIPImageProcessor\n",
     "from diffusers import StableDiffusionPipeline, AutoencoderKL, DDIMScheduler, UNet2DConditionModel"
    ]
