--- a/scripts/text_to_image/infer_models_boxmap_8_4.ipynb
+++ b/scripts/text_to_image/infer_models_boxmap_8_4.ipynb
@@ -15,7 +15,7 @@
       "2024-08-06 19:52:26.097562: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
       "2024-08-06 19:52:28.924276: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/src/diffuser/utils/outputs.py:63: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "/workspace/wxd/SVD/src/diffuser/utils/outputs.py:63: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
       "  torch.utils._pytree._register_pytree_node(\n"
      ]
     }
@@ -25,7 +25,7 @@
     "import torch.nn as nn\n",
     "import os\n",
     "import sys\n",
-    "sys.path.append('/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/src')\n",
+    "sys.path.append('/workspace/wxd/SVD/src')\n",
     "from transformers import CLIPTextModel, CLIPTokenizer, CLIPModel, CLIPImageProcessor\n",
     "from diffuser import StableDiffusionPipeline, AutoencoderKL, DDIMScheduler, UNet2DConditionModel"
    ]
@@ -40,7 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/storage/user/wangxiaodong/DWM_work_dir/lidar_maskgit_debug/src/diffuser/utils/outputs.py:63: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "/workspace/wxd/SVD/src/diffuser/utils/outputs.py:63: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
       "  torch.utils._pytree._register_pytree_node(\n"
      ]
     }
