--- a/scripts/text_to_video/infer_videomodels_boxmap_8_5.ipynb
+++ b/scripts/text_to_video/infer_videomodels_boxmap_8_5.ipynb
@@ -15,7 +15,7 @@
       "2024-08-07 12:13:20.344262: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
       "2024-08-07 12:13:23.383512: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "/workspace/wxd/SVD/src/diffuser/utils/outputs.py:63: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
+      "/root/SVD/src/diffuser/utils/outputs.py:63: UserWarning: torch.utils._pytree._register_pytree_node is deprecated. Please use torch.utils._pytree.register_pytree_node instead.\n",
       "  torch.utils._pytree._register_pytree_node(\n"
      ]
     }
@@ -26,7 +26,7 @@
     "import os\n",
     "import sys\n",
     "from diffusers.utils import export_to_video\n",
-    "sys.path.append('/workspace/wxd/SVD/src')\n",
+    "sys.path.append('/root/SVD/src')\n",
     "from transformers import CLIPTextModel, CLIPTokenizer, CLIPModel, CLIPImageProcessor\n",
     "from diffuser.models.unet_action_v11 import UNetSpatioTemporalConditionModel_Action\n",
     "from diffuser import StableDiffusionPipeline, AutoencoderKL, DDIMScheduler, UNet2DConditionModel\n",
